# AStarGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
AStar/: AStarAlgo.cpp  AStarAlgo.h  Application.cpp  Application.h  Board.cpp  Board.h  CMakeLists.txt  FadeScene.cpp  FadeScene.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  SceneID.h
AStar/Assets/Shaders/: FadeShader.frag
engine/: Application.cpp  Application.h  CMakeLists.txt  Core.cpp  Core.h  Defaults.cpp  Defaults.h  HF.cpp  HF.h
engine/Assets/Shaders/: QuadShader.frag  QuadShader.vert  fstShader.vert
engine/Contexts/: Contexts.h
engine/Graphics/: Buffer.cpp  Buffer.h  ElementBuffer.cpp  ElementBuffer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.cpp  ShaderStorageBuffer.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
engine/Logger/: Logger.cpp  Logger.h
engine/Management/Cameras/: CameraManager.cpp  CameraManager.h
engine/Management/Events/: Dispatcher.h  EventManager.cpp  EventManager.h  Events.h  Input.cpp  Input.h  KeyCodes.h
engine/Management/Textures/: TextureManager.cpp  TextureManager.h
engine/Math/: Projection.cpp  Projection.h  Transform.h  Transform2D.cpp  Transform2D.h
engine/Renderer/: RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h
engine/Scene/: Camera2D.cpp  Camera2D.h  Scene.cpp  Scene.h
engine/Shapes/: Shapes.h
engine/Window/: Window.cpp  Window.h  WindowSettings.h
